appId: app.capgo.ffmpeg
---
- retry:
    maxRetries: 4
    commands:
      - runFlow:
          when:
            visible: "Pixel Launcher isn't responding"
          commands:
            - tapOn:
                text: "Wait"
                retryTapIfNoChange: true
      - launchApp
      - runFlow:
          when:
            visible: "Pixel Launcher isn't responding"
          commands:
            - tapOn:
                text: "Wait"
                retryTapIfNoChange: true
      - launchApp
      - extendedWaitUntil:
          visible: "FFmpeg capability playground"
          timeout: 10000
